import Foundation

struct AccessibilityIdentifier {
    static let emptyLabel = "AccessibilityIdentifierEmptyLabel"
    static let movieDetailsView = "AccessibilityIdentifierMovieDetailsView"
    static let searchField = "AccessibilityIdentifierSearchMovies"
}
