...
    let showMovieQueriesSuggestions: (@escaping (_ didSelect: MovieQuery) -> Void) -> Void
    let closeMovieQueriesSuggestions: () -> Void
}

enum MoviesListViewModelLoadMode {
    case trending
    case search
}

enum MoviesListViewModelLoading {
    case fullScreen
    case nextPage
}
...
